<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_playlist">Поиск</string>
    <string name="media_library_playlist">Медиатека</string>
    <string name="setting_playlist">Настройки</string>

    <string name="setting_night_subject">Темная тема</string>
    <string name="setting_share_app">Поделиться приложением</string>
    <string name="setting_write_to_support">Написать в поддержку</string>
    <string name="setting_terms_of_use">Пользовательское соглашение</string>
</resources>