<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/text_back"
            style="@style/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/arrow_back"
            android:contentDescription="@string/app_name"
            android:padding="16dp" />

        <TextView
            style="@style/TextStyleMainMenu"
            android:text="@string/setting_playlist" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/setting_night_subject"
            android:textSize="@dimen/settings_text_size"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            style="@style/StyleSetting"
            android:text="@string/setting_share_app" />

        <ImageView
            style="@style/StyleSetting"
            android:layout_weight="1"
            android:background="@drawable/share_app" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            style="@style/StyleSetting"
            android:text="@string/setting_write_to_support" />

        <ImageView
            style="@style/StyleSetting"
            android:layout_weight="1"
            android:background="@drawable/support_agent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            style="@style/StyleSetting"
            android:text="@string/setting_terms_of_use" />

        <ImageView
            style="@style/StyleSetting"
            android:layout_weight="1"
            android:background="@drawable/next_open_window" />
    </LinearLayout>

</LinearLayout>