<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size" />

    <Button
        android:id="@+id/search_playlist_maker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layoutMarginHorizontalActivityMain"
        android:layout_marginTop="@dimen/layoutMarginTopActivityMain"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search_playlist"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/primary_radius"
        app:icon="@drawable/search_playlist"
        app:iconGravity="textStart"
        app:iconPadding="5dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/media_library_playlist_maker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layoutMarginHorizontalActivityMain"
        android:layout_marginTop="@dimen/layoutMarginTopActivityMain"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media_library_playlist"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/primary_radius"
        app:icon="@drawable/media_library_playlist"
        app:iconGravity="textStart"
        app:iconPadding="5dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/setting_playlist_maker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layoutMarginHorizontalActivityMain"
        android:layout_marginTop="@dimen/layoutMarginTopActivityMain"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/setting_playlist"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/primary_radius"
        app:icon="@drawable/settings_playlist"
        app:iconGravity="textStart"
        app:iconPadding="5dp"
        app:iconTint="@color/black" />

</androidx.appcompat.widget.LinearLayoutCompat>



